[package]
name = "minesweeper-rs"
version = "0.1.0"
authors = ["Robert Mikhayelyan <rob.mikh@outlook.com>"]
edition = "2021"

[dependencies]
rand = "0.9"
windows-numerics = "0.3"

[dependencies.windows]
version = "0.62.2"
features = [
    "Graphics",
    "System",
    "UI_Composition_Desktop",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT_Composition",
    "Win32_UI_WindowsAndMessaging",
]

[features]
show-mines = []
